[1] Pre-processing Files/UPB/GpMessages/7962996544700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, 19 February 2024 1:10:01 pm</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    .count()
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Monday, 19 February 2024 1:10:01 pm (Elapsed Time: 0.08 seconds)</msg></messages>